corrected the title in head

--- a/webDevBoot-4-25.html
+++ b/webDevBoot-4-25.html
@@ -13,7 +13,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Los tres perros</title>
+    <title>First Gen Pokemon Chart</title>
     <meta name="description" content="Duplicate the screenshot during Section 4, Lecture 25 Tables Pokemon Exercise">
     <meta name="keywords" content="HTML,CSS,JavaScript">
     <meta name="author" content="Steven DeLoach (sfdeloach@gmail.com)">
