some directory and file rearrangin' completed css intro exercise

--- a/webDevBoot-3-22.html
+++ b/webDevBoot-3-22.html
@@ -24,7 +24,7 @@
 <body>
     <h1>Los tres perros</h1>
     <p>Hi! We are Brisket, Porterhouse, and Cinnamon and we are always on the lookout!</p>
-    <img src="dogs.jpg" alt="picture of three dogs looking out a window" width="350">
+    <img src="./img/dogs.jpg" alt="picture of three dogs looking out a window" width="350">
     <h3>Some of our favorite activities include:</h3>
     <ul>
         <li>Squirrel patrol</li>
