--- a/blank.html
+++ b/blank.html
@@ -1,5 +1,52 @@
-<?php
+<!doctype html>
 
-echo "Is PHP working?";
+<!--
+      Author:      Steven DeLoach (sfdeloach@gmail.com)
+      Date:        January 9, 2017
+      Title:       blank.html
+      Description: A page to display when you have an empty feeling
+-->
 
-?>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Blank Page</title>
+    <meta name="description" content="A page to display when you have an empty feeling">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta name="author" content="Steven DeLoach (sfdeloach@gmail.com)">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html,
+        body {
+            font-family: monospace;
+            color: darkgrey;
+            background: darkgrey;
+        }
+        
+        img {
+            opacity: 0.33;
+        }
+        
+        table {
+            border: 15px solid lightgrey;
+            background: white;
+        }
+    </style>
+</head>
+
+<body>
+    <table>
+        <tr>
+            <td>
+                <img src="./img/construction.png" alt="under construction" width="40">
+            </td>
+            <td>
+                <p>page under construction...</p>
+            </td>
+        </tr>
+    </table>
+
+</body>
+
+</html>
