busy day, decent progress

--- a/blank.html
+++ b/blank.html
@@ -22,6 +22,8 @@
             font-family: monospace;
             color: darkgrey;
             background: darkgrey;
+            font-weight: 900;
+            letter-spacing: 4px;
         }
         
         img {
@@ -31,6 +33,9 @@
         table {
             border: 15px solid lightgrey;
             background: white;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 22.5%;
         }
     </style>
 </head>
@@ -42,7 +47,10 @@
                 <img src="./img/construction.png" alt="under construction" width="40">
             </td>
             <td>
-                <p>page under construction...</p>
+                <p>--> page under construction --></p>
+            </td>
+            <td>
+                <img src="./img/construction.png" alt="under construction" width="40">
             </td>
         </tr>
     </table>
