--- a/bootstrap-example.html
+++ b/bootstrap-example.html
@@ -34,46 +34,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img width="30px" alt="Brand" src="img/shield.png"></a>
+                <a class="navbar-brand" href="#">Channel 14</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Applications<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">76 Delta</a></li>
+                            <li><a href="#">Wellness</a></li>
+                            <li><a href="#">Activity Logs</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">Silver Affidavits</a></li>
                         </ul>
                     </li>
                 </ul>
+                <form class="navbar-form navbar-right">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search Channel 14">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -83,7 +66,8 @@
         <div class="jumbotron">
             <h1>Altamonte Springs Police Department</h1>
             <h2><span class="label label-primary">mission</span></h2>
-            <p>The Altamonte Springs Police Department is committed to excellence in service through community involvement.<br>Together our Partnership will develop a sense of community pride and an atmosphere intolerant of criminal activity. </p>
+            <p>The Altamonte Springs Police Department is committed to excellence in service through community involvement.
+                <br>Together our Partnership will develop a sense of community pride and an atmosphere intolerant of criminal activity. </p>
             <h2><span class="label label-primary">vision</span></h2>
             <p>Through our partnership with the Community, we will become the model for others to follow.</p>
             <h2><span class="label label-primary">values</span></h2>
@@ -107,7 +91,8 @@
                 <p class="help-block">Example block-level help text here.</p>
             </div>
             <div class="checkbox">
-                <label><input type="checkbox"> Check me out</label>
+                <label>
+                    <input type="checkbox"> Check me out</label>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
