more css bootstrap stuff

--- a/bootstrap-example.html
+++ b/bootstrap-example.html
@@ -63,20 +63,43 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Altamonte Springs Police Department</h1>
-            <h2><span class="label label-primary">mission</span></h2>
-            <p>The Altamonte Springs Police Department is committed to excellence in service through community involvement.
-                <br>Together our Partnership will develop a sense of community pride and an atmosphere intolerant of criminal activity. </p>
-            <h2><span class="label label-primary">vision</span></h2>
-            <p>Through our partnership with the Community, we will become the model for others to follow.</p>
-            <h2><span class="label label-primary">values</span></h2>
-            <p>Professionalism</p>
-            <p>Respect</p>
-            <p>Integrity</p>
-            <p>Dedication</p>
-            <p>Excellence</p>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="jumbotron">
+                    <h1 class="text-right">Channel 14 <img width=20% src="img/redbluenight_crop.png" alt="jumbotron image" class="img-responsive img-thumbnail"></h1>
+                </div>
+            </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="jumbotron">
+                    <h2><span class="label label-primary">MISSION</span></h2>
+                    <hr>
+                    <p>The Altamonte Springs Police Department is committed to excellence in service through community involvement.
+                        <br>Together our Partnership will develop a sense of community pride and an atmosphere intolerant of criminal activity. </p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="jumbotron">
+                    <h2><span class="label label-primary">VISION</span></h2>
+                    <hr>
+                    <p>Through our partnership with the Community, we will become the model for others to follow.</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="jumbotron">
+                    <h2><span class="label label-primary">VALUES</span></h2>
+                    <hr>
+                    <p><strong>P</strong>rofessionalism</p>
+                    <p><strong>R</strong>espect</p>
+                    <p><strong>I</strong>ntegrity</p>
+                    <p><strong>D</strong>edication</p>
+                    <p><strong>E</strong>xcellence</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
     <hr>
     <div class="container">
