--- a/webDevBoot-7-74.html
+++ b/webDevBoot-7-74.html
@@ -2,11 +2,11 @@
 
 <!--
       Author:      Steven DeLoach (sfdeloach@gmail.com)
-      Date:        <insert date here>
+      Date:        January 13, 2017
       Course:      Udemy - The Web Developer Bootcamp
       Instructor:  Colt Steele
-      Title:       <insert title here>
-      Description: <insert description here>
+      Title:       Butterfly Paws
+      Description: Landing page for a faux site dedicated to Pappilons
 -->
 
 <html lang="en">
@@ -17,21 +17,65 @@
     <meta name="author" content="Steven DeLoach (sfdeloach@gmail.com)">
 
     <!-- TODO -->
-    <meta name="description" content="Enter description here">
+    <meta name="description" content="Landing page for a faux site dedicated to Pappilons">
     <meta name="keywords" content="HTML,CSS,JavaScript">
 
     <!-- TODO -->
-    <title>Insert Title Here!!!</title>
+    <title>Butterfly Paws</title>
 
     <!-- STYLE SHEETS -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <!-- INSTALL FONTS HERE??? -->
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/webDevBoot-7-74.css">
 </head>
 
 <body>
-    <!-- TODO -->
+    <div class="container header">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">butterfly paws</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#"><i class="fa fa-home fa-fw" aria-hidden="true"></i> Home<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#"><i class="fa fa-question fa-fw" aria-hidden="true"></i> About</a></li>
+                        <li><a href="#"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Contact</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> Sign Up</a></li>
+                        <li><a href="#"><i class="fa fa-user fa-fw" aria-hidden="true"></i> Log In</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container footer">
+        <nav class="navbar navbar-inverse navbar-fixed-bottom">
+            <div class="container-fluid">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">web page created by sfdeloach <i class="fa fa-copyright" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="container my-main-display">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>butterfly paws</h1>
+                <h3>find your forever friend</h3>
+                <hr>
+                <a class="btn btn-default btn-lg" href="#" role="button"><i class="fa fa-paw" aria-hidden="true"></i>&nbsp; get started</a>
+            </div>
+        </div>
+    </div>
 
     <!-- SCRIPTS -->
     <script src="js/jquery-3.1.1.min.js"></script>
