successfully moved the root of the apache server

--- a/gallery.html
+++ b/gallery.html
@@ -51,20 +51,22 @@
     </nav>
     <div class="container">
         <div class="jumbotron">
-            <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
-            <p>A bunch of beautiful photographs that I did not take!</p>
+            <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> Lily's Butterfly Garden</h1>
+            <p>Saturday, January, 14, 2017</p>
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
-            <div class="col-lg-4 col-sm-6"><img src="img/redbluenight_crop.png" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/01.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/02.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/03.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/04.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/05.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/06.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/07.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/08.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/09.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/10.jpg" class="img-responsive img-thumbnail" alt="image"></div>
+            <div class="col-lg-4 col-sm-6"><img src="img/gallery/11.jpg" class="img-responsive img-thumbnail" alt="image"></div>
         </div>
     </div>
 
