--- a/webDevBoot-9-90.html
+++ b/webDevBoot-9-90.html
@@ -29,11 +29,13 @@
     <style>
         .my-code {
             white-space: pre;
-            background-color: lightgrey;
+            border-left: 6px solid blueviolet;
+            /* Something crazy from CSS-tricks.com */
+            background: repeating-radial-gradient(circle, linen, gainsboro 10px, gainsboro 10px, gainsboro 20px);
         }
         
         .comments {
-            color: green;
+            color: forestgreen;
         }
     </style>
 </head>
