--- a/webDevBoot-14-144.html
+++ b/webDevBoot-14-144.html
@@ -15,6 +15,13 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h2><span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;&nbsp;Scoreboard</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <table class="table">
@@ -28,16 +35,16 @@
                     </tr>
                     <tr>
                         <td>
-                            <button class="btn btn-default btn-lg home-plus" type="submit"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                            <button class="btn btn-default btn-lg home-plus" type="submit"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></button>
                         </td>
                         <td>
-                            <button class="btn btn-default btn-lg home-minus" type="submit"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+                            <button class="btn btn-default btn-lg home-minus" type="submit"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></button>
                         </td>
                         <td>
-                            <button class="btn btn-default btn-lg away-plus" type="submit"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                            <button class="btn btn-default btn-lg away-plus" type="submit"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></button>
                         </td>
                         <td>
-                            <button class="btn btn-default btn-lg away-minus" type="submit"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+                            <button class="btn btn-default btn-lg away-minus" type="submit"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></button>
                         </td>
                     </tr>
                 </table>
@@ -46,16 +53,24 @@
         </div>
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <div class="input-group">
                     <input type="text" class="form-control" value="5" aria-describedby="basic-addon2">
-                    <span class="input-group-addon" id="basic-addon2">Winning Score</span>
+                    <span class="input-group-addon" id="basic-addon2">Winning Score&nbsp;&nbsp;<span class="glyphicon glyphicon-fire" aria-hidden="true"></span></span>
                 </div>
             </div>
-            <div class="col-md-3">
-                <button class="btn btn-danger" type="submit">Reset</button>
-            </div>
             <div class="col-md-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-2">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary reset">Reset&nbsp;&nbsp;<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5"></div>
         </div>
     </div>
     <script src="js/webDevBoot-14-144.js"></script>
