--- a/webDevBoot-15-150.html
+++ b/webDevBoot-15-150.html
@@ -27,31 +27,59 @@
 <body>
     <div class="container-fluid">
         <div class="row title">
-            <div class="col-md-12 text-center">
+            <div class="col-xs-3 text-right">
+                <h1 class="game-over"></h1>
+            </div>
+            <div class="col-xs-6 text-center">
                 <h3>THE GREAT</h3>
-                <h1>RGB(211, 206, 13)</h1>
+                <h1 id="rgb-title">+</h1>
                 <h3>GUESSING GAME</h3>
+            </div>
+            <div class="col-xs-3 text-left">
+                <h1 class="game-over"></h1>
             </div>
         </div>
         <div class="row menu">
-            <div class="col-md-4"></div>
-            <div class="col-md-2 text-left">
+            <div class="col-xs-2 col-md-3 col-lg-4"></div>
+            <div class="col-xs-4 col-md-3 col-lg-2 h4 text-center" id="new-colors">
                 NEW COLORS
             </div>
-            <div class="col-md-1 text-center select">
+            <div class="col-xs-2 col-md-1 col-lg-1 h4 text-center" id="easy">
                 EASY
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-xs-2 col-md-2 col-lg-1 h4 text-center select" id="hard">
                 HARD
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-xs-2 col-md-3 col-lg-4"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row main">
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 text-center">
+                <p class="colorsquare"></p>
+            </div>
         </div>
     </div>
 
     <!-- SCRIPTS -->
-    <script src="js/webDevBoot-15-150.js"></script>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/webDevBoot-15-150-script.js"></script>
 </body>
 
 </html>
