hope this does not mess it up

--- a/webDevBoot-15-150.html
+++ b/webDevBoot-15-150.html
@@ -21,6 +21,7 @@
     <!-- STYLE SHEETS -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/webDevBoot-15-150.css">
 </head>
 
