todo app almost finished, two bugs remain

--- a/webDevBoot-18-171-todo-app.html
+++ b/webDevBoot-18-171-todo-app.html
@@ -40,21 +40,23 @@
             <input type="text" placeholder="Add New Todo...">
         </div>
         <!-- Add items here and below -->
-        <div class="item">
-            <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
-            <div class="details">Take out the garbage</div>
-        </div>
-        <div class="item">
-            <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
-            <div class="details">Feed the dogs</div>
-        </div>
-        <div class="item">
-            <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
-            <div class="details">Pick up Lily from ballet class and do a bunch of super fun stuff!</div>
-        </div>
-        <div class="item">
-            <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
-            <div class="details">Go to the Y!</div>
+        <div class="item-group">
+            <div class="item">
+                <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
+                <div class="details">Take out the garbage</div>
+            </div>
+            <div class="item">
+                <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
+                <div class="details">Feed the dogs</div>
+            </div>
+            <div class="item">
+                <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
+                <div class="details">Pick up Lily from ballet class</div>
+            </div>
+            <div class="item">
+                <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
+                <div class="details">Go to the Y!</div>
+            </div>
         </div>
     </div>
 
