todo app complete, css is a bag full of tricks!

--- a/webDevBoot-18-171-todo-app.html
+++ b/webDevBoot-18-171-todo-app.html
@@ -1,6 +1,13 @@
 <!doctype html>
 
 <!--
+ _____ ___________ _____    ___  ____________ 
+|_   _|  _  |  _  \  _  |  / _ \ | ___ \ ___ \
+  | | | | | | | | | | | | / /_\ \| |_/ / |_/ /
+  | | | | | | | | | | | | |  _  ||  __/|  __/ 
+  | | \ \_/ / |/ /\ \_/ / | | | || |   | |    
+  \_/  \___/|___/  \___/  \_| |_/\_|   \_|          
+
       Author:      Steven DeLoach (sfdeloach@gmail.com)
       Date:        January 31, 2017
       Course:      Udemy - The Web Developer Bootcamp
@@ -34,12 +41,12 @@
     <div id="main">
         <div id="title">
             <div id="todo">TO-DO LIST</div>
-            <div id="plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
+            <div id="plus"><i class="fa fa-caret-up" aria-hidden="true"></i></div>
         </div>
         <div id="new-todo-field">
             <input type="text" placeholder="Add New Todo...">
         </div>
-        <!-- Add items here and below -->
+        <!-- Parent class for all items -->
         <div class="item-group">
             <div class="item">
                 <div class="trash"><i class="fa fa-trash" aria-hidden="true"></i></div>
@@ -65,7 +72,7 @@
     <script src="js/bootstrap.min.js"></script>
     -->
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery-ui.min.todo.app.js"></script>
     <script src="js/webDevBoot-18-171.js"></script>
 </body>
 
